--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "dev": "nodemon --inspect server.js",
+    "start": "node index.js",
+    "dev": "nodemon --inspect index.js",
     "lint": "eslint --ext .js,.jsx --fix"
   },
   "author": "",
