--- a/package.json
+++ b/package.json
@@ -24,14 +24,17 @@
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.23.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "express-validator": "^6.9.0",
+    "fs-promise": "^2.0.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.17"
   }
 }
