--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.8",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.17"
+    "nodemailer": "^6.4.17",
+    "socket.io": "^3.0.5"
   }
 }
